--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link href="./output.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>DHARAM</title>
+	<title>DHARM</title>
 </head>
 
 <body>
